# Conciliador-Bancario

./: .env  .gitignore  TODO.md  pyproject.toml  test_database.py
conciliador/: Currency.py  Database.py  __init__.py  __main__.py  conciliador.py  loader.py  utils.py
conciliador/database/: BaseModel.py  Database.py  Schema.py
conciliador/database/models/: Card.py  DailyBankData.py  DailyData.py  DailyReportData.py  Deposit.py  Finisher.py  Report.py  ReportData.py  Statement.py  StatementData.py  StatementFinisherLink.py  Summary.py
conciliador/database/sqlite3/: SQLiteDatabase.py  SQLiteSchema.py
conciliador/db/: db_insertions.json
conciliador/loaders/: Loader.py  ReportLoader.py  StatementLoader.py
conciliador/src/: Conciliador.py
conciliador/src/database/: BaseModel.py  ColumnOrdinationEnum.py  Database.py  ModelsConfig.py
conciliador/src/database/join/: Join.py  JoinTypeEnum.py
conciliador/src/database/models/: Finisher.py  FinisherPattern.py  Rate.py  Report.py  Statement.py  StatementEntry.py  StatementEntryFinisherLink.py  StatementEntryPattern.py  Type.py  Verification.py  __init__.py
conciliador/src/loaders/: InsertionsLoader.py  Loader.py  ReportLoader.py  StatementLoader.py
conciliador/src/utils/: Currency.py
conciliador/src/utils/unique_iter/: UniqueList.py  UniqueTuple.py
conciliador/trash/: __init__.txt  cards_test.txt  digest.txt  summary.txt  utils.txt
db/: database.db  db_schema.json
templates/: database.template.json  digest.template.txt  summary.template.json
