[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Dias"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet (>=5.2.0,<6.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "antlr4-python3-runtime (>=4.13.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
